Fix MappingToolbar cropping issue

--- a/src/components/InteractWrapper/InteractWrapper.scss
+++ b/src/components/InteractWrapper/InteractWrapper.scss
@@ -102,7 +102,6 @@ $handle-size: 12px;
 
 .toolbar {
   position: absolute;
-  width: 100%;
   left: 0;
   bottom: 0px;
 }
